#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

CFLASGS="${CFLAGS=}"

AC_PREREQ(2.61)
AC_INIT([portspoof], [0.2], [piotr at duszynski.eu])
AC_CONFIG_AUX_DIR(auto)
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE(portspoof,0.2)
AC_CONFIG_SRCDIR([src/portspoof.c])
AC_CONFIG_HEADER([src/config.h])
AC_DEFINE([_GNU_SOURCE], [1], [Use GNU source])

UNAME=`uname`

AC_CANONICAL_HOST
AC_SUBST([host])

# Check system type
case "$host_os" in
linux*)
     AC_DEFINE_UNQUOTED(LINUX,1,[This is a Linux system])
     ;;
openbsd*)
	AC_DEFINE_UNQUOTED(SOMEBSD,1,[This is a BSD system])
	AC_DEFINE_UNQUOTED(OPENBSD,1,[This is an OpenBSD system])
;;
esac

# Checks for programs.
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([fcntl.h limits.h netdb.h netinet/in.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/timeb.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([inet_ntoa memset socket])

AC_CONFIG_FILES([Makefile src/Makefile tools/Makefile])
AC_OUTPUT
